2009-04-20  Lluis Sanchez Gual  <lluis@novell.com>

	* Project/CProject.cs: Track api changes in IExecutionHandler.

2009-04-20  Mike Krüger  <mkrueger@novell.com>

	* templates/ConsoleCProject.xpt.xml:
	* templates/EmptyCSourceFile.xft.xml:
	* templates/EmptyCHeaderFile.xft.xml:
	* templates/ConsoleCppProject.xpt.xml:
	* templates/EmptyCppHeaderFile.xft.xml:
	* templates/EmptyCppSourceFile.xft.xml:
	* templates/StaticLibraryCProject.xpt.xml:
	* templates/SharedLibraryCProject.xpt.xml:
	* templates/SharedLibraryCppProject.xpt.xml:
	* templates/StaticLibraryCppProject.xpt.xml: Fixed "Bug 491090
	  - Standard Header doesn't work".

2009-04-20  Mike Krüger  <mkrueger@novell.com>

	* gtk-gui/gui.stetic:
	* Gui/CTextEditorExtension.cs:
	* gtk-gui/CBinding.AddPathDialog.cs:
	* gtk-gui/CBinding.AddLibraryDialog.cs: Track api changes.

2009-04-17  Mike Kestner  <mkestner@novell.com>

	* CBinding.csproj: don't require specific gtk-sharp version.

2009-04-15  Lluis Sanchez Gual  <lluis@novell.com>

	* AssemblyInfo.cs:
	* CBinding.addin.xml: Bump MD version.

2009-03-13  Andrés G. Aragoneses  <aaragoneses@novell.com>

	* gtk-gui/gui.stetic:
	* gtk-gui/CBinding.PackageDetails.cs: Making some strings not
	  translatable.

2009-03-04  Lluis Sanchez Gual  <lluis@novell.com>

	* Project/CProject.cs: Changed the way execution handlers
	  work. We are not using platform ids anymore. Instead, we use
	  command strings when looking for execution handlers.
	  IExecutionHandlerFactory has been removed and now everything
	  is handled by IExecutionHandler, which has a new CanExecute
	  method. This model is more simple and more generic.

2009-02-20  Michael Hutchinson  <mhutchinson@novell.com>

	* CBinding.csproj: Don't use 'make' to build.

2009-02-18  Mike Krüger  <mkrueger@novell.com>

	* Project/Package.cs:
	* Project/CProject.cs:
	* Compiler/ICompiler.cs:
	* Compiler/CCompiler.cs:
	* Compiler/GNUCompiler.cs: Fixed 'Bug 456971 - ${ProjectDir}